syntax = "proto3";

package main;
option go_package = "jobpb";
message Job {
    string JobUUID = 1;
    string CompanyUUID = 2;
    string JobLink = 3;
    string DefaultLink = 4;
    string ProvidedID = 5;
    string CompanyName = 6;
    string Location = 7;
    int64 ExperienceLevel = 8;
    bool Active = 9;
    int64 JobPosted = 10;
}